--- a/content/posts/10-ui-ux-tips-that-you-should-know-forms.mdx
+++ b/content/posts/10-ui-ux-tips-that-you-should-know-forms.mdx
@@ -19,7 +19,12 @@ Today, we will talk about forms. What is form? Web form is basically a place whe
 
 ## 1. Keep it simple
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/keep-it-simple.png" alt="" width="1200" height="880" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/keep-it-simple.png"
+  alt=""
+  width="1200"
+  height="880"
+/>
 
 The simplest, but the most important tip. Please, avoid asking for too much information, that might be useless in the future. Many surveys have reported that 27% of the people leave the form they think is lengthy.
 
@@ -36,7 +41,12 @@ After all, if you really need a lot of details in your form, consider splitting 
 
 ## 2. Build multi-step forms
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/multi-step.png" alt="" width="1200" height="880" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/multi-step.png"
+  alt=""
+  width="1200"
+  height="880"
+/>
 
 Splitting your complicated form into multiple steps will increase your form completion rate, trust me. Many users leave automatically when they see a lot of fields to fill.
 
@@ -48,7 +58,12 @@ Multi-step forms are like games, when you leave - you lose. Do any of us want to
 
 ## 3. Enable showing password
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/show-password.png" alt="" width="1200" height="700" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/show-password.png"
+  alt=""
+  width="1200"
+  height="700"
+/>
 
 Do you know that feeling, when you misspell your password? Right, it's very frustrating, but it's so much more irritating when you cannot see where you did a mistake. Why?
 
@@ -56,7 +71,12 @@ Prevent users from having to delete and re-enter the entire password by using es
 
 ## 4. Avoid reset button
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/reset.png" alt="" width="1200" height="700" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/reset.png"
+  alt=""
+  width="1200"
+  height="700"
+/>
 
 Reset button is, in the most cases, bad idea. If you consider about using it, please, think twice. In reality, this button often hurts users.
 
@@ -66,7 +86,12 @@ Remember, that most users are aware that refreshing the page or just re-entering
 
 ## 5. Mark the fields
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/mark-fields.png" alt="" width="1200" height="700" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/mark-fields.png"
+  alt=""
+  width="1200"
+  height="700"
+/>
 
 Marking fields is important, because then user can simple judge which field he have to fill. Honestly, it's your choice which fields you mark, you can do it in two ways:
 
@@ -77,7 +102,12 @@ Although, according to various theories, it's better to tick the optional fields
 
 ## 6. Give user a gift
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/gift.png" alt="" width="1200" height="700" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/gift.png"
+  alt=""
+  width="1200"
+  height="700"
+/>
 
 User should have a clear signal, that he's filling this form for something. Give him a prize!
 
@@ -85,7 +115,12 @@ People always choose more attractive option and when you offer something for the
 
 ## 7. Use autofocus
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/autofocus.png" alt="" width="1200" height="700" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/autofocus.png"
+  alt=""
+  width="1200"
+  height="700"
+/>
 
 Automatically activated first (or another needed one) field will give a hint to a respondent where he should start.
 
@@ -95,7 +130,12 @@ You'd be surprised how many people are giving up the form at the start. Counter 
 
 ## 8. Display appropriate errors
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/errors.png" alt="" width="1200" height="840" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/errors.png"
+  alt=""
+  width="1200"
+  height="840"
+/>
 
 It doesn't matter what type of validation you use (maybe should I make an article about different strategies?), you should always use inline errors.
 
@@ -105,7 +145,12 @@ You should use human language, remembering that your end user doesn't have to be
 
 ## 9. Choose the right types
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/types.png" alt="" width="1200" height="800" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/types.png"
+  alt=""
+  width="1200"
+  height="800"
+/>
 
 Don't use text fields for everything! In HTML we have a lot of <Link href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#input_types">fields' types</Link> that can help user to provide answers in the right format.
 
@@ -113,7 +158,12 @@ It's also useful to be able to display the <Link href="https://developer.mozilla
 
 ## 10. Avoid Z-Pattern
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/z-pattern.png" alt="" width="1200" height="800" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/z-pattern.png"
+  alt=""
+  width="1200"
+  height="800"
+/>
 
 Last but not the least - the Z-Pattern. But, what is it?
 
@@ -136,4 +186,9 @@ See you next time! 👋
 
 PS. Please, remember this tips and don't do such things 👇
 
-<Image src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/phone-number.gif" alt="" width="720" height="408" />
+<Image
+  src="/img/posts/10-ui-ux-tips-that-you-should-know-forms/phone-number.gif"
+  alt=""
+  width="720"
+  height="408"
+/>
