--- a/content/posts/do-you-know-all-input-types.mdx
+++ b/content/posts/do-you-know-all-input-types.mdx
@@ -11,10 +11,11 @@ type: "post"
 ---
 
 <div id="introduction">
-  Choosing the right type of input is certainly very important in terms of the User Experience. Today I'll walk you
-  through all the types available in HTML5 with particular emphasis on the most useful ones. But first, I suggest you
-  check how many types are you able to point at the moment, what do you think? Check below and be sure to let me know
-  what your score is 👇 Good luck, but without cheating! 🎯
+  Choosing the right type of input is certainly very important in terms of the User Experience.
+  Today I'll walk you through all the types available in HTML5 with particular emphasis on the most
+  useful ones. But first, I suggest you check how many types are you able to point at the moment,
+  what do you think? Check below and be sure to let me know what your score is 👇 Good luck, but
+  without cheating! 🎯
 </div>
 
 <QuizDialog
@@ -45,7 +46,11 @@ type: "post"
   scoreMessages={[
     { score: 85, message: "Wow, your knowledge is stunning! Are you a senior developer? 🤔" },
     { score: 60, message: "That's a pretty good result! Where did you learn it? 😛" },
-    { score: 35, message: "You know something, but your knowledge should be consolated, maybe by this article? 😇" },
+    {
+      score: 35,
+      message:
+        "You know something, but your knowledge should be consolated, maybe by this article? 😇",
+    },
     {
       score: 0,
       message: "You should definitely read this article! 😅",
@@ -83,7 +88,12 @@ work better. Don't use it for everything!
 
 &#8203;<Link href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/tel">tel</Link> - used to enter telephone number. Unlike `url` and `email`, there is no built-in validation, because the phone formats differ too much around the world.
 
-<Image src="/img/posts/do-you-know-all-input-types/one-liners.png" alt="" width="1200" height="880" />
+<Image
+  src="/img/posts/do-you-know-all-input-types/one-liners.png"
+  alt=""
+  width="1200"
+  height="880"
+/>
 
 <Highlight variant="warning" title="Avoid abusing one-liners">
 
@@ -103,7 +113,12 @@ This group contains input fields that are commonly used for handling forms. The 
 
 &#8203;<Link href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/reset">reset</Link> - used to reset the form to its original state.
 
-<Image src="/img/posts/do-you-know-all-input-types/form-handling.png" alt="" width="1200" height="880" />
+<Image
+  src="/img/posts/do-you-know-all-input-types/form-handling.png"
+  alt=""
+  width="1200"
+  height="880"
+/>
 
 ## Date related
 
@@ -119,7 +134,12 @@ Everyone knows dates. But, do you know that we have five different types for inp
 
 &#8203;<Link href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/month">month</Link> - do you want to receive a specific month name from your user? Use `month` and you will get additionally a year! 😅
 
-<Image src="/img/posts/do-you-know-all-input-types/date-related.png" alt="" width="1200" height="970" />
+<Image
+  src="/img/posts/do-you-know-all-input-types/date-related.png"
+  alt=""
+  width="1200"
+  height="970"
+/>
 
 <Highlight variant="warning" title="Control's UI">
 
