--- a/content/posts/how-i-built-my-personal-website.mdx
+++ b/content/posts/how-i-built-my-personal-website.mdx
@@ -11,9 +11,9 @@ type: "post"
 ---
 
 <div id="introduction">
-  If you have the desire to create your own blog, you are probably surprised by the number of tools available to do so.
-  After all, a day without a <Link href="https://dayssincelastjavascriptframework.com/">new js framework</Link> is a day
-  lost.
+  If you have the desire to create your own blog, you are probably surprised by the number of tools
+  available to do so. After all, a day without a{" "}
+  <Link href="https://dayssincelastjavascriptframework.com/">new js framework</Link> is a day lost.
 </div>
 
 When I was planning this site, I wanted to make it as fast as possible and to be able to create the most personalized content possible. How did I do it? What made me do it? Check it out below and you may find the answers you need to get started.
