--- a/content/posts/learning-programming.mdx
+++ b/content/posts/learning-programming.mdx
@@ -11,10 +11,11 @@ type: "post"
 ---
 
 <div id="introduction">
-  Whether you're looking to jumpstart your career or just wanting to learn something new, programming is a skill that
-  can open up a lot of doors. The great thing about it is that it's easy to get started, but the journey to becoming a
-  master coder can be challenging. Here, we will talk about the common roadblocks you may encounter and how to overcome
-  them. Moreover, I hope to dispel some myths, let's start! 🚀
+  Whether you're looking to jumpstart your career or just wanting to learn something new,
+  programming is a skill that can open up a lot of doors. The great thing about it is that it's easy
+  to get started, but the journey to becoming a master coder can be challenging. Here, we will talk
+  about the common roadblocks you may encounter and how to overcome them. Moreover, I hope to dispel
+  some myths, let's start! 🚀
 </div>
 
 ## Beginnings are hard
@@ -107,4 +108,9 @@ At the end, I leave you a quite interesting and very true graph describing the D
 
 See you next time! 👋
 
-<Image src="/img/posts/learning-programming/dunning-kruger.jpg" alt="Dunning-Kruger effect" width="960" height="640" />
+<Image
+  src="/img/posts/learning-programming/dunning-kruger.jpg"
+  alt="Dunning-Kruger effect"
+  width="960"
+  height="640"
+/>
