--- a/content/posts/remarkable-2-what-is-it-and-why-you-should-buy-it.mdx
+++ b/content/posts/remarkable-2-what-is-it-and-why-you-should-buy-it.mdx
@@ -11,9 +11,10 @@ type: "post"
 ---
 
 <div id="introduction">
-  We all want to succeed. We try our luck in different areas to reach our goal. But whatever we do, we need to remember
-  to be consistent and productive. The organisation of time also proves to be an important element. It all sounds so
-  harsh, doesn't it? I'll show you something that can make it easier for you 😉
+  We all want to succeed. We try our luck in different areas to reach our goal. But whatever we do,
+  we need to remember to be consistent and productive. The organisation of time also proves to be an
+  important element. It all sounds so harsh, doesn't it? I'll show you something that can make it
+  easier for you 😉
 </div>
 
 ## What is it?
