--- a/content/posts/why-you-should-use-floats-in-your-projects.mdx
+++ b/content/posts/why-you-should-use-floats-in-your-projects.mdx
@@ -51,7 +51,11 @@ and I will answer: "Use floats!".
 
 Imagine that you get a layout like the one below and you need to code it:
 
-<Image src="/img/posts/why-you-should-use-floats-in-your-projects/example-layout.png" width="1200" height="880" />
+<Image
+  src="/img/posts/why-you-should-use-floats-in-your-projects/example-layout.png"
+  width="1200"
+  height="880"
+/>
 
 With `flex` or `grid` you should consider creating additional containers for each row and column. How to size elements properly? Maybe modify the design a bit? You're wasting time! With `float` you can do it automatically in "one line" of code:
 
@@ -72,7 +76,10 @@ Is there a better readable code? Don't answer, that was a rhetorical question.
 
 I think it's the right time to quote my friend's testimony from school while we're preparing for the vocational exam (we had the task of reproducing the given layout of the page):
 
-<Quote text="Not working? Put some float: left in random places and check it again!" author="Someone smart" />
+<Quote
+  text="Not working? Put some float: left in random places and check it again!"
+  author="Someone smart"
+/>
 
 And, to my and your surprise, this approach works in most cases! Floats are wonderful!
 
@@ -123,4 +130,8 @@ See you next time! 👋 (maybe in more serious post)
 
 PS. To make sure you don't find this article completely pointless, I'm attaching an interesting article about the <Link href="http://grid-layout.com/history.html">evolution of layout on the web</Link>.
 
-<Image src="/img/posts/why-you-should-use-floats-in-your-projects/float-meme.png" width="1400" height="1400" />
+<Image
+  src="/img/posts/why-you-should-use-floats-in-your-projects/float-meme.png"
+  width="1400"
+  height="1400"
+/>
