--- a/content/projects/animations.mdx
+++ b/content/projects/animations.mdx
@@ -16,9 +16,9 @@ priority: 7
 ---
 
 <div id="introduction">
-  I always wanted to create a UI library, but my design skills, in short, didn't allow for it 😊 So I decided to create
-  something as simple as possible. Smooth, short animations, whose code you can directly download and place on your
-  site, this was my task.
+  I always wanted to create a UI library, but my design skills, in short, didn't allow for it 😊 So
+  I decided to create something as simple as possible. Smooth, short animations, whose code you can
+  directly download and place on your site, this was my task.
 </div>
 
 ## Tech stack
@@ -31,7 +31,12 @@ All files with graphics are in `.svg` format so I can easily manipulate individu
 
 The whole app was builded and packed with **Parcel**, to reduce files' size and increase performance 💪
 
-<Image src="/img/projects/animations/stack-equation.png" alt="Tech stack equation" width="1200" height="880" />
+<Image
+  src="/img/projects/animations/stack-equation.png"
+  alt="Tech stack equation"
+  width="1200"
+  height="880"
+/>
 
 ## Problems
 
@@ -39,7 +44,12 @@ The biggest problem was to work out all the details related to the design of gra
 
 On the code side, I can't mention too much, because there was no complicated logic here, and the styles themselves as well as the structure are very simple.
 
-<Image src="/img/projects/animations/preview.png" alt="Selected animation " width="1200" height="880" />
+<Image
+  src="/img/projects/animations/preview.png"
+  alt="Selected animation "
+  width="1200"
+  height="880"
+/>
 
 ## Lessons learned
 
@@ -51,4 +61,9 @@ Using **Parcel** allowed me to get acquainted with another tool useful for build
 
 All in all, I think the app came out pretty good and I got a lot out of it in terms of knowledge 💪
 
-<Image src="/img/projects/animations/display.gif" alt="Animation preview" width="1120" height="888" />
+<Image
+  src="/img/projects/animations/display.gif"
+  alt="Animation preview"
+  width="1120"
+  height="888"
+/>
