--- a/content/projects/ecommerce-sofa.mdx
+++ b/content/projects/ecommerce-sofa.mdx
@@ -17,9 +17,9 @@ priority: 4
 ---
 
 <div id="introduction">
-  Yeah, yeah, I know the name isn't the best. But the most important thing is the code! 😉 This is simple shop project,
-  where you can select products, add them to basket and pay for them at the checkout. Simple, but quite good and with
-  prospects for future growth.
+  Yeah, yeah, I know the name isn't the best. But the most important thing is the code! 😉 This is
+  simple shop project, where you can select products, add them to basket and pay for them at the
+  checkout. Simple, but quite good and with prospects for future growth.
 </div>
 
 ## Tech stack
@@ -34,7 +34,12 @@ Payments are made with **Stripe**, so you can pay comfortably and securely 💵
 
 Of course, the whole app was written in **TypeScript** and **Next.js** 😁
 
-<Image src="/img/projects/ecommerce-sofa/stack.png" alt="Tech stack chilling" width="1200" height="880" />
+<Image
+  src="/img/projects/ecommerce-sofa/stack.png"
+  alt="Tech stack chilling"
+  width="1200"
+  height="880"
+/>
 
 ## Problems
 
@@ -42,7 +47,12 @@ Hmm, I don’t remember any major problems that I had making this project. I too
 
 But, if I had to mention any difficulties, I think I would point out the tests 🧪 It was my first time with testing app this size and I have to take care a lot of thing to make other things work.
 
-<Image src="/img/projects/ecommerce-sofa/e2e-test.jpg" alt="e2e test preview" width="1280" height="720" />
+<Image
+  src="/img/projects/ecommerce-sofa/e2e-test.jpg"
+  alt="e2e test preview"
+  width="1280"
+  height="720"
+/>
 
 ## Lessons learned
 
