--- a/content/projects/finejob.mdx
+++ b/content/projects/finejob.mdx
@@ -18,9 +18,10 @@ priority: 1
 ---
 
 <div id="introduction">
-  I decided to build something like this, because I always dreamed about website with many functionalities, where the
-  user can have his own account and can influence the main content. My choice was to create portal with job offers, I
-  wanted to help people (myself?) get a dream work. Imagine that I could search for my first job in my own app!
+  I decided to build something like this, because I always dreamed about website with many
+  functionalities, where the user can have his own account and can influence the main content. My
+  choice was to create portal with job offers, I wanted to help people (myself?) get a dream work.
+  Imagine that I could search for my first job in my own app!
 </div>
 
 ## Tech stack
