--- a/content/projects/github-profile-readme-generator.mdx
+++ b/content/projects/github-profile-readme-generator.mdx
@@ -17,9 +17,9 @@ priority: 6
 
 <div id="introduction">
   At the beginning I have to mention that, this is a copy of original{" "}
-  <Link href="https://github.com/rahuldkjain/github-profile-readme-generator">GPRG</Link>. But, why I rewrote fully
-  functioning app? I used it a couple of times and I looked in the code. Imagine my surprise when I discovered that the
-  project doesn't use TypeScript 😯 I had to change it!
+  <Link href="https://github.com/rahuldkjain/github-profile-readme-generator">GPRG</Link>. But, why
+  I rewrote fully functioning app? I used it a couple of times and I looked in the code. Imagine my
+  surprise when I discovered that the project doesn't use TypeScript 😯 I had to change it!
 </div>
 
 ## Tech stack
@@ -32,7 +32,12 @@ Integration with Markdown was also interesting for me I got to see it in action.
 
 Worth mentioning, that app is using **TailwindCSS**, but I didn't have to work too much with it, because my task was to focus on **JavaScript** code.
 
-<Image src="/img/projects/github-profile-readme-generator/stack.png" alt="Tech stack chart" width="1200" height="880" />
+<Image
+  src="/img/projects/github-profile-readme-generator/stack.png"
+  alt="Tech stack chart"
+  width="1200"
+  height="880"
+/>
 
 ## Problems
 
@@ -61,4 +66,9 @@ And the most important thing - I have written a lot of **TypeScript** code (Gith
 
 The app is fully working, so you can generate your next README using it (with **TypeScript** 😁).
 
-<Image src="/img/projects/github-profile-readme-generator/readme.png" alt="README.md" width="1200" height="880" />
+<Image
+  src="/img/projects/github-profile-readme-generator/readme.png"
+  alt="README.md"
+  width="1200"
+  height="880"
+/>
