--- a/content/projects/pozywka.mdx
+++ b/content/projects/pozywka.mdx
@@ -59,7 +59,12 @@ After all, even Lighthouse is showing really cool result and, regarding users op
   height="880"
 />
 
-<Image src="/img/projects/pozywka/lighthouse.png" alt="Lighthouse result" width="640" height="118" />
+<Image
+  src="/img/projects/pozywka/lighthouse.png"
+  alt="Lighthouse result"
+  width="640"
+  height="118"
+/>
 
 ## Lessons learned
 
