--- a/content/projects/takenote.mdx
+++ b/content/projects/takenote.mdx
@@ -16,9 +16,10 @@ priority: 5
 ---
 
 <div id="introduction">
-  I personally used this application for some period of time, because when I want to quick note something it suits me
-  well. A lot of features, integrations, and more. Later, I discover <Link href="https://notion.so">Notion</Link> and
-  the life of my notes changed 180 degrees, but I think this is material for a separate article 😉
+  I personally used this application for some period of time, because when I want to quick note
+  something it suits me well. A lot of features, integrations, and more. Later, I discover{" "}
+  <Link href="https://notion.so">Notion</Link> and the life of my notes changed 180 degrees, but I
+  think this is material for a separate article 😉
 </div>
 
 ## Tech stack
@@ -53,4 +54,9 @@ It’s worth mentioning that I also learned how to use and transform **Markdown*
 
 So, I have to say: “Thank you, TakeNote!” 😅
 
-<Image src="/img/projects/takenote/certificate.png" alt="Open Source Developer certificate" width="1200" height="880" />
+<Image
+  src="/img/projects/takenote/certificate.png"
+  alt="Open Source Developer certificate"
+  width="1200"
+  height="880"
+/>
